--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,7 @@ body {
     background-color: rgba(54, 65, 129, 1);
     margin: 0px 0px 0px 0px;
     align-items: stretch;
+    overflow: scroll;
 }
 
 .footer {
@@ -176,7 +177,7 @@ body {
 .homeGrid {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 50px 4fr 4fr 2fr;
+    grid-template-rows: 60px 3fr 3fr 3fr;
     grid-template-areas: "homeMenu""carPic" "maintMessage" "promotions";
     padding-left: 10px;
     padding-top: 0px;
@@ -188,15 +189,28 @@ body {
 
 .homeMenu {
     grid-area: homeMenu;
+    overflow: scroll;
+    background-color: rgba(255, 255, 255, 1);
+    overflow: scroll;
 }
 
 .carPic {
     grid-area: carPic;
     display: flex;
     flex-direction: column;
+    background-image: url("./Data/car1.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    overflow: hide;
+}
+
+img {
+    display: block;
+    margin: 0ps auto;
+    width: 250px;
+    height: 250px;
+    position: middle;
 }
 
 .maintMessage {
@@ -204,6 +218,7 @@ body {
     background-color: rgba(255, 255, 255, 1);
     display: flex;
     flex-direction: column;
+    overflow: scroll;
 }
 
 .promotions {
@@ -211,6 +226,7 @@ body {
     background-color: rgba(255, 255, 255, 1);
     display: flex;
     flex-direction: column;
+    overflow: scroll;
 }
 
 
@@ -272,8 +288,10 @@ nav>ul {
     justify-content: space-around;
     justify-items: left;
     position: relative;
-    padding: 5px 0px;
+    padding: 0px 0px;
     margin: 0px 0px;
+    width: 100%;
+    height: 100%;
     background-image: url(./Images/bars-solid.svg);
     background-size: auto auto;
     image-rendering: auto;
@@ -283,8 +301,10 @@ nav>ul {
 }
 
 nav>ul>li {
+    width: 100%;
+    height: 100%;
     font-size: 2rem;
-    margin-left: 25px;
+    margin-left: 5px;
 }
 
 .dropdown ul {
